manifest_files/rails-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-app-svc
spec: 
  ports:
  - protocol: TCP
    port: 3000
  selector:
    app: rails-app
