manifest_files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rails-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /.* 
        pathType: Prefix
        backend:
          service:
            name: rails-app-svc
            port:
              number: 3000
